<resources>
    <string name="app_name" translatable="false">Fiboku</string>
    <string name="new_book" > This means that you declare your book\'s condition to be exactly same as it should have been in, when it left the publisher.</string>
    <string name="fine_book" > This means that you declare your book\'s condition to be new, but allowing for the normal effects of time on an unused book that has been protected. A fine book shows no damage.</string>
    <string name="good_book">This means that you declare your book\'s condition to be worn but untorn. Buyers will not have any problem reading it.</string>
    <string name="loose_binding_book">This means that you declare your book to have pages or leaves in perfect state, but the binding is very bad, loose, off or non-existent.</string>
    <string name="fair_book" >This means that you declare your book to have minor wear and tear, but all the text pages and illustrations or maps are present. It may lack endpapers, half-title, and even the title page.</string>
    <string name="poor_book">This means that you declare your book to have the incomplete text, it is so damaged that it is only of interest to a buyer who seeks a reading copy. </string>
    <string name="search_by_title_author_isbn_publisher_keyword">Search by title, author, isbn or publisher</string>
    <string name="could_not_complete_search_query">Could not search for given keyword :(</string>
    <string name="retry_button">Retry</string>
    <string name="searched_book_image">Searched Book Image</string>
    <string name="isbn_of_book">ISBN of book</string>
    <string name="authors_of_book">authors of book</string>
    <string name="title_of_book">Title of Book</string>
    <string name="nothing_found_for_the_given_keyword">Nothing found for the given keyword :(</string>
    <string name="seems_like_no_internet_connection">Seems like you don\'t have internet connection</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">Fiboku has crashed</string>
<string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="dgts__login_digits_text">VERIFY MY NUMBER</string>
    <string name="phone_number_verification">PHONE NUMBER VERIFICATION</string>
    <string name="phone_number_description_message">In next screen, you will enter your 10-digit Mobile Number (+91 India code will be prepended). OTP verification will be performed by Twitter Digits</string>
    <string name="verify_my_number">VERIFY MY NUMBER</string>
    <string name="study_table">Study Table</string>
    <string name="book_cover">Book Cover</string>
    <string name="verification_failed">Verification Failed !</string>
    <string name="loading">Loading</string>
    <string name="enter_valid_isbn">Enter valid 13-digit isbn</string>
    <string name="feedback_string">We\'d love to hear from you about Fiboku. Don\'t hesitate, tell us all you like or hate !</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="go_to_app_settings">Please go to app settings, then click on permissions, and check all permissions that Fiboku demands.</string>
    <string name="cancel">Cancel</string>
    <string name="app_settings">App Settings</string>
    <string name="package_string">package</string>
    <string name="poor">POOR</string>
    <string name="poor_description">Poor describes a book that has the complete text but is so damaged that it is only of interest to a buyer who seeks a reading copy.</string>
    <string name="losse_binding">LOOSE BINDING</string>
    <string name="loose_binding_description">Loose Binding Copy describes a book in which the pages or leaves are perfect, but the binding is very bad, loose, off or non-existent.</string>
    <string name="binding_copy">BINDING COPY</string>
    <string name="binding_copy_description">Binding Copy describes a book in which the pages or leaves are perfect, and binding was done to retain this state.</string>
    <string name="fair">FAIR</string>
    <string name="fair_description">Fair shows wear and tear but all the text pages and illustrations or maps are present. It may lack endpapers, half-title, and even the title page. All defects must be noted.</string>
    <string name="good">GOOD</string>
    <string name="good_description">Good describes the condition of an average used worn book that is complete. Any defects must be noted.</string>
    <string name="fine">FINE</string>
    <string name="fine_description">Fine is as good as New but allowing for the normal effects of time on an unused book that has been protected. A fine book shows no damage.</string>
    <string name="new_string">NEW</string>
    <string name="new_description">As New is self-explanatory. It means that the book is in the state that it should have been in when it left the publisher.</string>
    <string name="no_description_found">No Description Found !</string>
    <string name="by">"By : "</string>
    <string name="thanks_for_your_response">Thanks for your response !</string>
    <string name="empty_feedback_recorded">Empty Feedback Recorded :(</string>
    <string name="details">" Detail : "</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="invite_people">Invite People</string>
    <string name="want_to_invite">Want to invite more friends to use this app ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="android_resource_link">android.resource://</string>
    <string name="drawable_directory">/drawable/</string>
    <string name="fiboku_icon">fiboku_icon</string>
    <string name="i_love_fiboku">Hey, I love Fiboku App. Its an amazing \'Book Sharing App\'. Just try it, I am sure you will love it too !</string>
    <string name="image_type_jpeg">image/jpeg</string>
    <string name="invite_friends_using">Invite Friends Using …</string>
    <string name="fake_action_bar_transition" translatable="false">fakeActionBarTransition</string>
    <string name="asc" translatable="false">" ASC"</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="upper_half" translatable="false">upperHalf</string>
    <string name="lower_half" translatable="false">lowerHalf</string>
    <string name="phone_number_verified">"Phone Number Verified : "</string>
    <string name="sign_in_with_digits_failure">Sign in with Digits failure</string>
    <string name="existing_phone_number">Existing Phone Number</string>
    <string name="new_phone_number">New Phone Number !</string>
    <string name="successfully_logged_in_existing_phone_number">"Successfully logged in existing Phone Number "</string>
    <string name="could_not_log_in_existing_phon_number">"Could not log in existing Phone Number : "</string>
    <string name="common_image_transition_view" translatable="false">commonImageTransitionView</string>
    <string name="no_camera_detected">No Camera Detected !</string>
    <string name="camera_permission_denied">Camera Permissions Denied</string>
    <string name="not_a_book_isbn_scanned">Not a book ISBN scanned !</string>
    <string name="desc" translatable="false">" DESC"</string>
    <string name="date_format" translatable="false">EEE, d MMM yyyy, HH:mm:ss Z</string>
    <string name="welcome">Welcome, %s</string>
    <string name="welcome_back">Welcome back, %s</string>
    <string name="has_book"><![CDATA[has book => %s]]></string>
    <string name="lend_book">Lend Book</string>
    <string name="ask_your_friend_to_lend">Ask your friend to lend you book ?</string>
    <string name="hey_i_need">Hey, I need \'</string>
    <string name="book_fiboku_tells_me">\' book. Fiboku tells me that you have this book available for lending. Please reply if book is still available.</string>
    <string name="isbn">"ISBN : "</string>
    <string name="key">key</string>
    <string name="about_fiboku">About Fiboku</string>
    <string name="menu">Menu</string>
    <string name="fiboku_for_android">FIBOKU FOR ANDROID</string>
    <string name="your_book_sharing_app">YOUR BOOK SHARING APP</string>
    <string name="name_colon">Name :</string>
    <string name="address_colon">Address :</string>
    <string name="temporary_address">Temporary : RAM 0x000000, Permanent : H.No. 0x111111, Internal Memory, Android Phone.</string>
    <string name="key_skills">Key Skills</string>
    <string name="personal_info">Personal Info</string>
    <string name="father_name">Father\'s Name</string>
    <string name="abhinav_puri">Abhinav Puri</string>
    <string name="education">Education</string>
    <string name="java_xml_gradle">Java, XML, Gradle</string>
    <string name="qualification">Qualification</string>
    <string name="apk">APK</string>
    <string name="relevant_skill">Relevant Skills</string>
    <string name="makes_borrowing_and_lending">Makes borrowing and lending of books easy.</string>
    <string name="experience">Experience</string>
    <string name="version_1">v 1.0</string>
    <string name="certification">Certification</string>
    <string name="all_rights_reserved">© 2016 Abhinav Puri. All rights reserved</string>
    <string name="birthday">Birthday</string>
    <string name="date_about">25–03–2016</string>
    <string name="height">Height</string>
    <string name="inches">3.7\'\' ~ 7\'\' inch</string>
    <string name="email_text">Email</string>
    <string name="pabhinav">pabhinav@iitrpr.ac.in</string>
    <string name="nomination">Nomination(s)</string>
    <string name="android_nanodegree">Android Nanodegree Program (Uncle)</string>
    <string name="projects">Project(s) :</string>
    <string name="github_link">https://github.com/abhinavp13/Fiboku</string>
    <string name="motivation">Motivation :</string>
    <string name="quote">\"The woods are lovely, dark and deep. But I have promises to keep, and miles to go before I sleep.\"</string>
    <string name="robert_frost">- Robert Frost</string>
    <string name="your_name">Your Name</string>
    <string name="home">home</string>
    <string name="home_cap">Home</string>
    <string name="uploaded_books">Uploaded Books</string>
    <string name="messages">Messages</string>
    <string name="eleven">11</string>
    <string name="connections">Connections</string>
    <string name="help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="about">About</string>
    <string name="go_back">Go Back</string>
    <string name="book_condition">Book Condition</string>
    <string name="confirm_book_condition">Confirm Book Condition</string>
    <string name="type_your_message_here">Type Your Message Here</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="send_message">send message</string>
    <string name="title_for_this_dialog">Title for the this dialog</string>
    <string name="body_dummy_text">Body of this dialog, can be very big, this dialog body should get inflated accordingly.</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="you_left_input_empty">You Left Input Empty</string>
</resources>